@@ -4,7 +4,6 @@ import com.cdkjframework.builder.ResponseBuilder;
 import com.cdkjframework.constant.IntegerConsts;
 import com.cdkjframework.enums.ResponseBuilderEnums;
 import com.cdkjframework.util.encrypts.AesUtils;
-import com.cdkjframework.util.log.LogUtils;
 import com.cdkjframework.util.tool.JsonUtils;
 import com.cdkjframework.util.tool.mapper.ReflectionUtils;
 import com.cdkjframework.util.tool.number.ConvertUtils;
@@ -13,6 +12,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.ServerHttpRequest;
 import org.springframework.http.server.ServerHttpResponse;
+import org.springframework.lang.NonNull;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseBodyAdvice;
 
@@ -31,41 +31,39 @@ import java.util.stream.Collectors;
  */
 
 @ControllerAdvice
-public class GlobalResponseHandler extends BodyHandler implements ResponseBodyAdvice {
+public class GlobalResponseHandler extends BodyHandler implements ResponseBodyAdvice<Object> {
 
   /**
    * 参数列表
    */
-  private static List<String> parameterList;
+  private static final List<String> PARAMETER_LIST;
   /**
    * 参数列表
    */
-  private static List<String> parameterCdkjList;
+  private static final List<String> PARAMETER_CDKJ_LIST;
 
   static {
-    parameterList = new ArrayList<>();
-    parameterCdkjList = new ArrayList<>();
-    parameterCdkjList.add("ResponseBuilder");
-    parameterCdkjList.add("PageEntity");
-    parameterList.add("java.lang");
-    parameterList.add("org.springframework.http.ResponseEntity");
+    PARAMETER_LIST = new ArrayList<>();
+    PARAMETER_CDKJ_LIST = new ArrayList<>();
+    PARAMETER_CDKJ_LIST.add("ResponseBuilder");
+    PARAMETER_CDKJ_LIST.add("PageEntity");
+    PARAMETER_LIST.add("java.lang");
+    PARAMETER_LIST.add("org.springframework.http.ResponseEntity");
   }
 
   /**
    * 验证需要修改验证
    *
    * @param methodParameter 请求类型
-   * @param aClass          类
+   * @param clazz           类
    * @return 返回结果
    */
   @Override
-  public boolean supports(MethodParameter methodParameter, Class aClass) {
+  public boolean supports(MethodParameter methodParameter, @NonNull Class clazz) {
     // 验证是否为
-    /**
-     * 结束进程常量
-     */
-    String SHUTDOWN = "shutdown";
-    if (SHUTDOWN.equals(methodParameter.getMember().getName())) {
+    // 结束进程常量
+    String shutdown = "shutdown";
+    if (shutdown.equals(methodParameter.getMember().getName())) {
       return false;
     }
     return supportsFilter(customConfig.getFilters(), methodParameter.getMember().getDeclaringClass().getName());
@@ -77,17 +75,19 @@ public class GlobalResponseHandler extends BodyHandler implements ResponseBodyAd
    * @param o                  内容
    * @param methodParameter    请求类型
    * @param mediaType          媒体类型
-   * @param aClass             类
+   * @param aClass              类
    * @param serverHttpRequest  request
    * @param serverHttpResponse response
    * @return 返回结果
    */
   @Override
-  public Object beforeBodyWrite(Object o, MethodParameter methodParameter, MediaType mediaType, Class aClass, ServerHttpRequest serverHttpRequest, ServerHttpResponse serverHttpResponse) {
+  public Object beforeBodyWrite(Object o, @NonNull MethodParameter methodParameter,
+                                @NonNull MediaType mediaType, @NonNull Class aClass,
+                                ServerHttpRequest serverHttpRequest, @NonNull ServerHttpResponse serverHttpResponse) {
     // 验证终端是否需要加密
     Boolean encryption = customConfig.isEncryption();
     HttpHeaders httpHeaders = serverHttpRequest.getHeaders();
-    if (httpHeaders != null && !httpHeaders.isEmpty()) {
+    if (!httpHeaders.isEmpty()) {
       encryption = header(httpHeaders);
     }
 
@@ -96,23 +96,21 @@ public class GlobalResponseHandler extends BodyHandler implements ResponseBodyAd
       return encryptHandle(o, encryption);
     }
 
-    Class clazz = methodParameter.getParameterType();
+    Class<?> clazz = methodParameter.getParameterType();
     final String returnTypeName = clazz.getName();
-    List<String> list = parameterList.stream()
-        .filter(f -> returnTypeName.contains(f))
+    List<String> list = PARAMETER_LIST.stream()
+        .filter(returnTypeName::contains)
         .collect(Collectors.toList());
     if (!list.isEmpty()) {
       return encryptHandle(o, encryption);
     }
-    list = parameterCdkjList.stream()
-        .filter(f -> returnTypeName.contains(f))
-        .collect(Collectors.toList());
+    list = PARAMETER_CDKJ_LIST.stream()
+        .filter(returnTypeName::contains)
+        .toList();
     if (!list.isEmpty()) {
-      /**
-       * 字段值
-       */
-      String FIELD_VALUE = "code";
-      Field field = ReflectionUtils.getDeclaredField(clazz, FIELD_VALUE);
+      // 字段值
+      String fieldValue = "code";
+      Field field = ReflectionUtils.getDeclaredField(clazz, fieldValue);
       Object value = ReflectionUtils.getFieldValue(field, o);
       ResponseBuilderEnums enums = ResponseBuilderEnums.Error;
       int v = ConvertUtils.convertInt(value);
@@ -155,8 +153,8 @@ public class GlobalResponseHandler extends BodyHandler implements ResponseBodyAd
 
     if (!encryption && customConfig.isJson()) {
       // 数据类型
-      String DATA_TYPE = "java.util.ArrayList";
-      if (DATA_TYPE.equals(o.getClass().getName())) {
+      String dataType = "java.util.ArrayList";
+      if (dataType.equals(o.getClass().getName())) {
         return JsonUtils.parseArray(json);
       }
       return JsonUtils.parseObject(json);
